--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,9 @@
     <string name="description_other">Other</string>
     <string name="err_attach_failed">Couldn\'t attach file.</string>
 
-    <string name="allowance">Daily Allowance</string>
+    <string name="label_daily_allowance">Daily Allowance</string>
     <string name="label_allowance">Allowance</string>
     <string name="label_total">Total</string>
     <string name="label_week">Week</string>
     <string name="label_today">Today</string>
-
 </resources>
